syntax = "proto3";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

message DocSearchRequest {
    string query = 1;
    int64 start = 2;
    int64 length = 3;
}

message Highlight {
    uint64 start = 1;
    uint64 end = 2;
}

message DocSearchResponse {
    string link = 1;
    string title = 2;
    string type = 3;
    string fragment = 4;
    string full_text = 5;
    repeated Highlight highlights = 6;
    repeated string tags = 7;

    // JSON encoded crumbs structure
    string crumbs = 8;
}

message DocSearchResponses {
    uint64 total = 1;
    repeated DocSearchResponse Items = 2;
}